--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,48 +1,54 @@
-  name: Docker Publish (GHCR)
+name: Docker Publish (GHCR)
 
-  on:
-    push:
-      branches: [ "**" ]
+on:
+  push:
+    branches: [ "**" ]
 
-  permissions:
-    contents: read
-    packages: write
+permissions:
+  contents: read
+  packages: write
 
-  env:
-    REGISTRY: ghcr.io
-    IMAGE_NAME: ${{ github.repository }}
+env:
+  REGISTRY: ghcr.io
+  # On ne définit plus IMAGE_NAME ici car on va le calculer en minuscules
 
-  jobs:
-    build-and-push:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-        - name: Set up JDK 21
-          uses: actions/setup-java@v4
-          with:
-            distribution: temurin
-            java-version: "21"
-            cache: maven
-            
-        - name: Grant execute permission for Maven wrapper
-          # On cible le fichier mvnw à l'intérieur du sous-dossier
-          run: chmod +x ./mvnw
-        - name: Build & Test
-          run: ./mvnw clean test
+      # ÉTAPE CLÉ : Transformer le nom du repo en minuscules
+      - name: Prepare Image Name
+        run: |
+          echo "IMAGE_NAME=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
 
-        - name: Log in to GHCR
-          uses: docker/login-action@v3
-          with:
-            registry: ${{ env.REGISTRY }}
-            username: ${{ github.actor }}
-            password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: "21"
+          cache: maven
 
-        - name: Build & Push
-          uses: docker/build-push-action@v6
-          with:
-            context: .
-            push: true
-            tags: |
-              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+      - name: Grant execute permission for Maven wrapper
+        run: chmod +x ./mvnw
+
+      - name: Build & Test
+        run: ./mvnw clean test
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & Push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          # On utilise maintenant la variable IMAGE_NAME mise à jour
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
